--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -6,7 +6,7 @@
                 template="/admin.xhtml">
 
     <ui:define name="head">
-        <title>Airtime - Boutikini</title>
+        <title>Airtime - BoutikinInsci</title>
         <link rel="shortcut icon" type="image/x-icon" href="#{resource['favicon/favicon.ico']}"/>
         <link rel="shortcut icon" type="image/x-icon" href="#{resource['favicon/favicon-16x16.png']}" sizes="16x16"/>
         <link rel="shortcut icon" type="image/x-icon" href="#{resource['favicon/favicon-32x32.png']}" sizes="32x32"/>
@@ -18,7 +18,7 @@
     </ui:define>
 
     <ui:define name="logo">
-        Airtime
+        BOUTIKINI
     </ui:define>
 
     <ui:define name="logo-mini">
@@ -31,16 +31,6 @@
 
     <ui:define name="top-menu">
         <ui:include src="/includes/top-bar.xhtml"/>
-    </ui:define>
-    
-     <!-- below is just an example on how to define more tabs for control sidebar --> 
-    <ui:define name="controlsidebar-tabs">
-        <li><a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-        <li><a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a></li>
-    </ui:define>
-     
-   <ui:define name="controlsidebar-content">
-        <ui:include src="/includes/controlsidebar-tabs-content.xhtml"/>
     </ui:define>
     
 
